# papr_mcpserver

./: .gitignore  LICENSE  NOTICE  README.md  package-lock.json  requirements.txt
.github/workflows/: build-docker-gcp.yml  deploy-azure-robust.yml  deploy-azure.yml  publish.yml  test.yml
python-mcp/: .dockerignore  Dockerfile  README.md  SYNC_STRATEGY.md  api.yaml  install_and_test.sh  install_uv.ps1  install_uv.sh  openapi.json  paprmcp.py  pyproject.toml  requirements.txt  setup_mcp.py  setup_run_mcp.py  sync_files.py  test_mcp_ci.py  test_results_summary.md
python-mcp/.github/: DEPLOYMENT.md
python-mcp/.github/workflows/: build-docker.yml  deploy-azure-robust.yml  publish.yml  test.yml
python-mcp/logs/: openapi_spec.json
python-mcp/memory/: context_window.py  memory_graph.py  memory_item.py  memory_item_relevance.py
python-mcp/models/: acl.py  cipher_ast.py  embedding_model.py  memory_models.py  model_validators.py  neo_path.py  parse_server.py  structured_outputs.py
python-mcp/papr_memory_mcp/: __main__.py  core.py
python-mcp/papr_memory_mcp/services/: logging_config.py
python-mcp/scripts/: install_and_test_linux.sh  install_and_test_windows.bat
python-mcp/services/: auth_utils.py  connector_service.py  document_status.py  email_service.py  logger_singleton.py  logging_config.py  memory_management.py  memory_service.py  processPDF.py  stripe_service.py  url_utils.py  user.py
python-mcp/tests/: README.md  TESTING.md  requirements-test.txt  test_mcp_comprehensive.py  test_paprmcp.py
