[project]
name = "papr-memory-mcp"
version = "0.1.0"
description = "Papr Memory API integration"
requires-python = ">=3.10"
authors = [
    { name = "Papr Team" }
]
dependencies = [
    "fastmcp>=0.1.0",
    "httpx>=0.26.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "debugpy",
    "flask>=2.0.0",
    "flask-cors>=3.0.0",
    "flask-socketio>=5.0.0",
    "python-socketio>=5.0.0",
    "eventlet>=0.30.0",
]

test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

ml = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "langchain-community>=0.0.10",
    "ollama>=0.1.6",
    "sentence-transformers>=2.2.2",
    "transformers>=4.36.0",
    "langchain>=0.1.0",
]

all = [
    "papr-memory-mcp[dev,test,ml]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.hatch.envs.default]
dependencies = [
    "papr-memory-mcp[dev,test]",
]

[tool.hatch.envs.dev]
dependencies = [
    "papr-memory-mcp[all]",
]

[project.scripts]
debug-server = "debugpy:run"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"] 
